fix(deck): :bug: fix speaker note list cutting off long lists of notes; improve UI

--- a/css/deck.css
+++ b/css/deck.css
@@ -39,7 +39,7 @@ ul {
 	background: #111;
 	margin: 0;
 	padding: 0.5em 0.5em 0.5em 1.5em;
-	flex: 1 0 auto;
+	flex: 1 1 auto;
 	overflow: auto;
 	font-size: 50%;
 }
